# debug-trigger

./: MAINTAINERS  README.md  main.c  meson.build  meson_options.txt
meson/: arm-linux-gneabi-gcc.ini  arm-linux-gneabihf-gcc.ini
systemd/system/: debug-trigger@.service
udev/rules.d/: p10bmc-debug-trigger-kcs1.rules  p10bmc-debug-trigger-kcs2.rules  p10bmc-debug-trigger-kcs3.rules  p10bmc-debug-trigger-kcs4.rules
